--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "lint": "eslint --fix ./src"
   },
   "author": "Emanuele Colombo",
   "license": "GPL-3.0",
@@ -14,7 +15,11 @@
     "phaser": "^3.80.1"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@eslint/js": "^9.8.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.8.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.0",
     "vite": "^5.1.4"
   }
 }
