--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
   "description": "Duel Times",
   "lang": "en",
   "dir": "ltr",
-  "theme_color": "#f8b234",
-  "background_color": "#f0f0f0",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "orientation": "landscape",
   "icons": [
     {
