--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@stylistic/eslint-plugin": "^2.6.2",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.8.0",
     "typescript": "^5.5.4",
