--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "check": "tsc && eslint --fix ./src",
     "build": "tsc && vite build",
     "lint": "eslint --fix ./src"
   },
