--- a/manifest.json
+++ b/manifest.json
@@ -11,25 +11,13 @@
   "orientation": "landscape",
   "icons": [
     {
-      "src": "manifest-icon-192.maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "manifest-icon-192.maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "manifest-icon-512.maskable.png",
+      "src": "maskable-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "manifest-icon-512.maskable.png",
+      "src": "maskable-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
