--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Emanuele Colombo",
   "license": "GPL-3.0",
   "dependencies": {
+    "@khmyznikov/pwa-install": "^0.4.4",
     "phaser": "^3.80.1"
   },
   "devDependencies": {
