--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "types": ["dom-chromium-installation-events", "web-app-manifest"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
